test(ddd-kitchenpos): refactor MenuGroupServiceTest