@@ -6,7 +6,6 @@ import static org.mockito.Mockito.*;
 import java.util.Collections;
 import java.util.List;
 
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
@@ -29,13 +28,6 @@ class MenuGroupServiceTest {
 	@InjectMocks
 	private MenuGroupService menuGroupService;
 
-	private MenuGroup validMenuGroup;
-
-	@BeforeEach
-	void setUp() {
-		validMenuGroup = MenuFixture.createValidMenuGroup();
-	}
-
 	@Nested
 	class create {
 
@@ -44,14 +36,13 @@ class MenuGroupServiceTest {
 		@NullAndEmptySource
 		void createMenuGroupWithEmptyOrNullName(String name) {
 			// given
-			MenuGroup menuGroup = new MenuGroup();
-			menuGroup.setName(name);
+			MenuGroup menuGroupWithInvalidName = MenuFixture.createMenuGroup(name);
 
 			// then
 			assertThatExceptionOfType(IllegalArgumentException.class)
 				.isThrownBy(() ->
 					// when
-					menuGroupService.create(menuGroup)
+					menuGroupService.create(menuGroupWithInvalidName)
 				);
 		}
 
@@ -59,6 +50,8 @@ class MenuGroupServiceTest {
 		@DisplayName("메뉴 그룹의 이름이 비어있지 않으면 메뉴 그룹을 생성할 수 있다")
 		void createMenuGroupWithValidName() {
 			// given
+			MenuGroup validMenuGroup = MenuFixture.createValidMenuGroup();
+
 			when(menuGroupRepository.save(any(MenuGroup.class))).thenReturn(validMenuGroup);
 
 			// when
@@ -90,14 +83,18 @@ class MenuGroupServiceTest {
 		@DisplayName("메뉴 그룹이 비어 있지 있을 때 모든 메뉴 그룹 조회 시 메뉴 그룹을 조회할 수 있다")
 		void findAllMenuGroupsWhenNotEmpty() {
 			// given
-			when(menuGroupRepository.findAll()).thenReturn(Collections.singletonList(validMenuGroup));
+			MenuGroup validMenuGroup = MenuFixture.createValidMenuGroup();
+			MenuGroup anotherValidMenuGroup = MenuFixture.createMenuGroup("모닝세트");
+
+			when(menuGroupRepository.findAll()).thenReturn(List.of(validMenuGroup, anotherValidMenuGroup));
 
 			// when
 			List<MenuGroup> foundMenuGroups = menuGroupService.findAll();
 
 			// then
 			assertThat(foundMenuGroups).isNotEmpty();
-			assertThat(foundMenuGroups.get(0).getName()).isEqualTo(validMenuGroup.getName());
+			assertThat(foundMenuGroups.getFirst().getName()).isEqualTo(validMenuGroup.getName());
+			assertThat(foundMenuGroups.getLast().getName()).isEqualTo(anotherValidMenuGroup.getName());
 		}
 	}
 }
